feat: Endpoint Relatório Receitas/Categorias com filtro de tempo